# dria-agent-b

./: .gitignore  Makefile  README.md  config.json  format_dataset.py  pyproject.toml  setup_memory.py  train_agent.sh
agent/: agent.py  model.py  pyproject.toml  schemas.py  settings.py  system_prompt.txt  tools.py
agent/async_agent/: async_model.py
data/eval/update/: 1_qa.jsonl  2_qa.jsonl
data/openrlhf/mixed/: valid.jsonl
data/openrlhf/one-category/retrieval/: valid.jsonl
data_gen/: README.md  configs.py  generate_graph.py  run.py
evaluation/: evaluate.py  judge.py  pyproject.toml
reports/qwen3-14b/mixed/: report.md
reports/qwen3-14b/ordered/: report.md
training/: __init__.py  action_processor.py  agent_func.py  retrieval.py  reward.py  update.py  utils.py
training/prompts/: retrieval_judge_prompt.txt  update_judge_prompt.txt
training/scripts/: format_dataset.py
