[project]
name = "obsidian-agent"
version = "0.1.0"
description = "Agent module for obsidian-agent project"
dependencies = [
    "openai",
    "pydantic>=2.0.0",
    "python-dotenv",
    "aiofiles",
    "jinja2",
    "black",
]
requires-python = ">=3.8"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
] 